feat: add page shop

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import "./components/tarifs.scss";
 @import "./components/profile.scss";
 @import "./components/servises.scss";
+@import "./components/shop.scss";
 
 * {
 	box-sizing: border-box;
