--- a/src/scss/components/servises.scss
+++ b/src/scss/components/servises.scss
@@ -137,3 +137,29 @@
 		margin: 0;
 	}
 }
+
+.faq {
+	&-accordeon {
+		& h3 {
+			font-size: calc(var(--fz) * 1.2);
+		}
+
+		& svg {
+			width: calc(var(--offset) * 1.3);
+		}
+	}
+
+	&-wrapper {
+		& p {
+			font-weight: 500;
+			font-size: var(--fz);
+			line-height: 150%;
+			color: #5d5d5d;
+			margin: 0;
+
+			&:first-of-type {
+				margin-top: 1em;
+			}
+		}
+	}
+}
