feat: add page employees

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 @import "./components/profile.scss";
 @import "./components/servises.scss";
 @import "./components/shop.scss";
+@import "./components/employees.scss";
 
 * {
 	box-sizing: border-box;
