--- a/css/main.css
+++ b/css/main.css
@@ -2083,6 +2083,88 @@ form button[type=reset]:active {
      object-fit: contain;
 }
 
+.employees {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: calc(max(calc(1.25 * 1vw), 15px) * 2);
+  grid-gap: calc(var(--offset) * 2);
+  gap: calc(max(calc(1.25 * 1vw), 15px) * 2);
+  gap: calc(var(--offset) * 2);
+  margin: max(calc(1.25 * 1vw), 15px) 0 calc(max(calc(1.25 * 1vw), 15px) * 4);
+  margin: var(--offset) 0 var(--offset-grid);
+}
+
+.employee {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: calc(max(calc(1.25 * 1vw), 15px) * 0.5);
+  gap: calc(var(--offset) * 0.5);
+}
+.employee__img {
+  width: calc(max(calc(1.25 * 1vw), 15px) * 10);
+  width: calc(var(--offset) * 10);
+}
+.employee__img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.employee__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: max(calc(1.25 * 1vw), 15px);
+  gap: var(--offset);
+}
+
+.employee-ref {
+  width: calc(max(calc(1.25 * 1vw), 15px) * 3);
+  width: calc(var(--offset) * 3);
+  height: calc(max(calc(1.25 * 1vw), 15px) * 3);
+  height: calc(var(--offset) * 3);
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.employee-ref svg {
+  width: calc(max(calc(1.25 * 1vw), 15px) * 1.5);
+  width: calc(var(--offset) * 1.5);
+  height: calc(max(calc(1.25 * 1vw), 15px) * 1.5);
+  height: calc(var(--offset) * 1.5);
+}
+
+.wp-link {
+  background-color: #3dc03c;
+}
+
+.tg-link {
+  background-color: #3b88fb;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
