fix: fix styles fro accordeon

--- a/src/scss/components/tabs.scss
+++ b/src/scss/components/tabs.scss
@@ -68,6 +68,7 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		gap: 1em;
 
 		&:first-of-type {
 			margin-top: 0.5em;
