--- a/src/scss/components/servises.scss
+++ b/src/scss/components/servises.scss
@@ -20,6 +20,7 @@
 		align-items: center;
 		justify-content: space-between;
 		margin-bottom: 0.5em;
+		gap: 1em;
 
 		& svg {
 			min-width: calc(var(--offset) * 1.6);
