fix: fix styles and add link to bot

--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -21,7 +21,7 @@
 				</svg>
 			</a>
 
-			<a href="#" class="nav__bot">@yumecs</a>
+			<a href="https://t.me/yumecs" class="nav__bot">@yumecs</a>
 		</div>
 	</nav>
 
