--- a/src/html/components/points.html
+++ b/src/html/components/points.html
@@ -8,7 +8,7 @@
 		<span>0</span>
 	</a>
 
-	<a href="#" class="choise">
+	<a href="./shop.html" class="choise">
 		<h1>Выбирай и заказывай сейчас</h1>
 		<span>
 			<svg width="24" height="20">
