--- a/src/scss/components/shop.scss
+++ b/src/scss/components/shop.scss
@@ -5,14 +5,13 @@
 		font-weight: 600;
 		font-size: calc(var(--fz) * 1.5);
 		line-height: 120%;
-		text-transform: capitalize;
 		color: var(--color-text-primary);
 		margin-bottom: 1em;
 	}
 
 	&-content {
 		display: flex;
-		justify-content: space-between;
+		justify-content: space-around;
 		flex-wrap: wrap;
 		gap: calc(var(--offset) * 2.5);
 	}
