--- a/css/main.css
+++ b/css/main.css
@@ -381,7 +381,6 @@ nav {
   font-size: calc(max(calc(1 * 1vw), 15px) * 1.1);
   font-size: calc(var(--fz) * 1.1);
   line-height: 120%;
-  text-transform: capitalize;
   text-align: left;
   color: #3b88fb;
   color: var(--color-bg-primary);
@@ -469,7 +468,6 @@ nav {
   font-size: calc(max(calc(1 * 1vw), 15px) * 1.2);
   font-size: calc(var(--fz) * 1.2);
   line-height: 120%;
-  text-transform: capitalize;
   text-align: center;
   color: #1f2f43;
   color: var(--color-text-primary);
@@ -625,7 +623,6 @@ nav {
   font-size: calc(max(calc(1 * 1vw), 15px) * 1.1);
   font-size: calc(var(--fz) * 1.1);
   line-height: 120%;
-  text-transform: capitalize;
   color: var(-color-text-primary);
 }
 .points-count b {
@@ -639,8 +636,8 @@ nav {
 }
 .points-count p {
   font-weight: 400;
-  font-size: calc(max(calc(1 * 1vw), 15px) * 1.1);
-  font-size: calc(var(--fz) * 1.1);
+  font-size: max(calc(1 * 1vw), 15px);
+  font-size: var(--fz);
   line-height: 120%;
   color: #5d5d5d;
   -ms-grid-column-span: 2;
@@ -679,7 +676,6 @@ nav {
   font-size: calc(var(--fz) * 1.1);
   line-height: 1;
   margin: 0;
-  text-transform: capitalize;
   color: #1f2f43;
   color: var(--color-text-primary);
 }
@@ -872,7 +868,6 @@ nav {
   font-size: calc(max(calc(1 * 1vw), 15px) * 1.3);
   font-size: calc(var(--fz) * 1.3);
   line-height: 110%;
-  text-transform: capitalize;
   color: #1f2f43;
   color: var(--color-text-primary);
 }
@@ -1222,7 +1217,6 @@ nav {
   font-size: calc(max(calc(1 * 1vw), 15px) * 1.5);
   font-size: calc(var(--fz) * 1.5);
   line-height: 120%;
-  text-transform: capitalize;
   color: #1f2f43;
   color: var(--color-text-primary);
   margin-bottom: 1em;
@@ -1560,7 +1554,6 @@ form button[type=reset]:active {
   font-size: max(calc(1 * 1vw), 15px);
   font-size: var(--fz);
   line-height: 120%;
-  text-transform: capitalize;
   display: block;
   text-align: center;
   width: 100%;
@@ -1853,7 +1846,6 @@ form button[type=reset]:active {
   font-size: calc(max(calc(1 * 1vw), 15px) * 1.5);
   font-size: calc(var(--fz) * 1.5);
   line-height: 120%;
-  text-transform: capitalize;
   color: #1f2f43;
   color: var(--color-text-primary);
   margin-top: 0.3em;
@@ -2052,7 +2044,6 @@ form button[type=reset]:active {
   font-size: calc(max(calc(1 * 1vw), 15px) * 1.5);
   font-size: calc(var(--fz) * 1.5);
   line-height: 120%;
-  text-transform: capitalize;
   color: #1f2f43;
   color: var(--color-text-primary);
   margin-bottom: 1em;
@@ -2061,9 +2052,8 @@ form button[type=reset]:active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: calc(max(calc(1.25 * 1vw), 15px) * 2.5);
@@ -2176,7 +2166,6 @@ form button[type=reset]:active {
   font-size: calc(max(calc(1 * 1vw), 15px) * 1.2);
   font-size: calc(var(--fz) * 1.2);
   line-height: 120%;
-  text-transform: capitalize;
   text-align: center;
   color: #1f2f43;
   color: var(--color-text-primary);
@@ -2372,7 +2361,6 @@ form button[type=reset]:active {
   font-size: max(calc(1 * 1vw), 15px);
   font-size: var(--fz);
   line-height: 150%;
-  text-transform: capitalize;
   color: #1f2f43;
   color: var(--color-text-primary);
 }
@@ -2392,7 +2380,6 @@ form button[type=reset]:active {
   font-size: calc(max(calc(1.25 * 1vw), 15px) * 1.3);
   font-size: calc(var(--offset) * 1.3);
   line-height: 150%;
-  text-transform: capitalize;
   color: #1f2f43;
   color: var(--color-text-primary);
   margin-bottom: max(calc(1.25 * 1vw), 15px);
@@ -2409,7 +2396,6 @@ form button[type=reset]:active {
   font-size: calc(max(calc(1 * 1vw), 15px) * 1.5);
   font-size: calc(var(--fz) * 1.5);
   line-height: 120%;
-  text-transform: capitalize;
   color: #1f2f43;
   color: var(--color-text-primary);
 }
@@ -2491,7 +2477,6 @@ form button[type=reset]:active {
   font-size: calc(max(calc(1 * 1vw), 15px) * 1.5);
   font-size: calc(var(--fz) * 1.5);
   line-height: 120%;
-  text-transform: capitalize;
   color: #1f2f43;
   color: var(--color-text-primary);
   margin-bottom: 0.6em;
@@ -2501,7 +2486,6 @@ form button[type=reset]:active {
   font-size: calc(max(calc(1 * 1vw), 15px) * 1.2);
   font-size: calc(var(--fz) * 1.2);
   line-height: 150%;
-  text-transform: capitalize;
   color: #1f2f43;
   color: var(--color-text-primary);
   margin: 0;
@@ -2511,7 +2495,6 @@ form button[type=reset]:active {
   font-size: calc(max(calc(1 * 1vw), 15px) * 1.5);
   font-size: calc(var(--fz) * 1.5);
   line-height: 120%;
-  text-transform: capitalize;
   color: #5d5d5d;
 }
 .dangerous-accordeon svg {
