fix: fix slider links

--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -13,7 +13,7 @@
 
 		<div class="nav__links">
 
-			<a href="tel:+998555031199" class="nav__phone">
+			<a onclick="window.open('tel:998555031199')" class="nav__phone">
 
 				<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path
