add script for telegramm

--- a/src/html/components/head.html
+++ b/src/html/components/head.html
@@ -25,6 +25,7 @@
 	<title>@@title</title>
 
 	@@include('./fonts.html')
-
+	
+	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<link rel="stylesheet" href="./css/main.min.css" />
 </head>
